--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
 
     <title>Job Application Tracker</title>
 </head>
-<body>
-    
+<body class="bg-[#f8fafc] p-6 md:p-12">
+
+    <!-- Header Section -->
+
+    <div class="max-w-5xl mx-auto">
+        <h1 class="text-3xl font-bold mb-10 text-[#0f172a]">Job Application Tracker</h1>
+
+        <div class="grid grid-cols-3 gap-6 mb-12">
+            <div class="bg-white p-6 rounded-lg shadow-sm border border-gray-100">
+                <p class="text-[11px] font-bold text-gray-400 uppercase tracking-wider mb-2">Total</p>
+                <h2 id="total-count" class="text-4xl font-bold">8</h2>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-sm border border-gray-100">
+                <p class="text-[11px] font-bold text-gray-400 uppercase mb-2">Interview</p>
+                <h2 id="interview-count" class="text-4xl font-bold text-green-600">0</h2>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-sm border border-gray-100">
+                <p class="text-[11px] font-bold text-gray-400 uppercase mb-2  ">Rejected</p>
+                <h2 id="rejected-count" class="text-4xl font-bold text-red-600">0</h2>
+            </div>
+        </div>
 </body>
 </html>
