Available Jobs Section

--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
                 <h2 id="rejected-count" class="text-4xl font-bold text-red-600">0</h2>
             </div>
         </div>
+
+         <!-- Available Jobs Section -->
+
+        <div class="flex justify-between items-end mb-6">
+            <h2 class="text-xl font-bold text-blue-600">Available Jobs</h2>
+            <p class="text-gray-400 text-sm font-bold"><span id="header-count">8</span> jobs</p>
+        </div>
+
+        
 </body>
 </html>
