All Jobs and Interview  Rejected button Section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             <h2 class="text-xl font-bold text-blue-600">Available Jobs</h2>
             <p class="text-gray-400 text-sm font-bold"><span id="header-count">8</span> jobs</p>
         </div>
+        <!-- All Jobs and Interview  Rejected button Section-->
+        <div class="flex gap-2 mb-8">
+            <button id="btn-all" onclick="filterTab('all')" class="active-tab px-6 py-1.5 rounded text-xs font-bold border border-gray-200">All</button>
+            <button id="btn-interview" onclick="filterTab('interview')" class="px-6 py-1.5 rounded text-xs font-bold border bg-white text-gray-500">Interview</button>
+            <button id="btn-rejected" onclick="filterTab('rejected')" class="px-6 py-1.5 rounded text-xs font-bold border bg-white text-gray-500">Rejected</button>
+        </div>
 
         
 </body>
