--- a/index.html
+++ b/index.html
@@ -53,6 +53,120 @@
             <button id="btn-rejected" onclick="filterTab('rejected')" class="px-6 py-1.5 rounded text-xs font-bold border bg-white text-gray-500">Rejected</button>
         </div>
 
+        <!-- Job Card Section -->
+        <div id="job-container" class="space-y-4">
+
+        <!-- Company-1 Section -->
+            <div id="card-1" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-1')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">Mobile First Corp</h3>
+                <p class="text-slate-500 mb-4">React Native Developer</p>
+                <div class="text-xs text-gray-400 mb-4 ">Remote • Full-time • $130,000 - $175,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-1', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-1', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-2 Section -->
+            <div id="card-2" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-2')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">WebFlow Agency</h3>
+                <p class="text-slate-500 mb-4">Web Designer & Developer</p>
+                <div class="text-xs text-gray-400 mb-4 ">Los Angeles, CA • Part-time • $80,000 - $120,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-2', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-2', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-3 Section -->
+            <div id="card-3" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-3')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">DataViz Solutions</h3>
+                <p class="text-slate-500 mb-4">Data Visualization Specialist</p>
+                <div class="text-xs text-gray-400 mb-4 ">Boston, MA • Full-time • $125,000 - $165,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Transform complex datasets into beautiful, interactive visualizations. Expertise in D3.js or Tableau required.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-3', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-3', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-4 Section -->
+            <div id="card-4" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-4')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">CloudFirst Inc</h3>
+                <p class="text-slate-500 mb-4">Backend Developer (Node.js)</p>
+                <div class="text-xs text-gray-400 mb-4 ">Remote • Contract • $90/hr - $110/hr</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Scale our cloud infrastructure to support 10 million daily users. Knowledge of AWS and Microservices is a plus.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-4', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-4', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-5 Section -->
+            <div id="card-5" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-5')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">Creative Pixel</h3>
+                <p class="text-slate-500 mb-4">UI/UX Designer</p>
+                <div class="text-xs text-gray-400 mb-4 ">San Francisco • Full-time • $140,000 - $180,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Design intuitive interfaces for the next generation of SaaS tools. Strong Figma skills required.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-5', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-5', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-6 Section -->
+            <div id="card-6" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-6')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">SecureIT Labs</h3>
+                <p class="text-slate-500 mb-4">Cybersecurity Analyst</p>
+                <div class="text-xs text-gray-400 mb-4">Austin, TX • Full-time • $110,000 - $150,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Protect enterprise systems from advanced threats. Perform regular audits and vulnerability scans.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-6', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-6', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-7 Section -->
+            <div id="card-7" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-7')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">GreenTech Co</h3>
+                <p class="text-slate-500 mb-4">Frontend Engineer (React)</p>
+                <div class="text-xs text-gray-400 mb-4 ">Remote • Full-time • $120,000 - $145,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Build high-performance React components for eco-friendly tech solutions. Performance optimization expert needed.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-7', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-7', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
+
+            <!-- Company-8 Section -->
+            <div id="card-8" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
+                <button onclick="removeJob('card-8')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
+                <h3 class="font-bold text-xl text-slate-800">FinFlow Systems</h3>
+                <p class="text-slate-500 mb-4">Full Stack Developer</p>
+                <div class="text-xs text-gray-400 mb-4 ">Chicago, IL • Full-time • $135,000 - $170,000</div>
+                <span class="status-badge bg-blue-50 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
+                <p class="text-sm text-gray-600 mb-6 leading-relaxed">Develop and maintain financial processing systems using PostgreSQL and React. Finance industry knowledge is a plus.</p>
+                <div class="flex gap-3">
+                    <button onclick="setStatus('card-8', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-8', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
+                </div>
+            </div>
         
 </body>
 </html>
