No Jobs Found Section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
                     <button onclick="setStatus('card-8', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
                 </div>
             </div>
+
+            <!-- No Jobs Found Section -->
+            <div id="no-jobs-placeholder" class="hidden flex flex-col items-center justify-center py-20 text-center">
+                <div class="bg-blue-50 p-6 rounded-2xl mb-4"><i class="fa-solid fa-file-lines text-blue-500 text-6xl"></i></div>
+                 <h3 class="text-xl font-bold text-slate-800">No jobs Available</h3>
+                <p class="text-slate-400 text-sm mt-2 max-w-xs">You haven't moved any jobs to this category yet. Start tracking your applications!</p>
+            </div>
+        </div>
+    </div>
         
 </body>
 </html>
