--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <span class="status-badge bg-blue-100 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
                 <p class="text-sm text-gray-600 mb-6 leading-relaxed">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.</p>
                 <div class="flex gap-3">
-                    <button onclick="setStatus('card-1', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
+                    <button onclick="setStatus('card-1', 'interview')" class="border border-green-500 text-green-600 text-[10px] px-4          py-2 rounded font-bold uppercase hover:bg-green-50">Interview</button>
                     <button onclick="setStatus('card-1', 'rejected')" class="border border-red-400 text-red-500 text-[10px] px-4 py-2 rounded font-bold uppercase hover:bg-red-50">Rejected</button>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <!-- Company-5 Section -->
             <div id="card-5" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
                 <button onclick="removeJob('card-5')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
-                <h3 class="font-bold text-xl text-slate-800">Creative Pixel</h3>
+                <h3 class="font-bold text-xl text-slate-800">Innovation Labs</h3>
                 <p class="text-slate-500 mb-4">UI/UX Designer</p>
                 <div class="text-xs text-gray-400 mb-4 ">San Francisco • Full-time • $140,000 - $180,000</div>
                 <span class="status-badge bg-blue-100 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
@@ -157,7 +157,7 @@
             <!-- Company-8 Section -->
             <div id="card-8" class="job-card bg-white p-8 rounded-lg border border-gray-100 shadow-sm relative" data-status="all">
                 <button onclick="removeJob('card-8')" class="absolute top-8 right-8 text-slate-300 hover:text-rose-500"><i class="fas fa-trash-alt"></i></button>
-                <h3 class="font-bold text-xl text-slate-800">FinFlow Systems</h3>
+                <h3 class="font-bold text-xl text-slate-800">TechCorp Industries</h3>
                 <p class="text-slate-500 mb-4">Full Stack Developer</p>
                 <div class="text-xs text-gray-400 mb-4 ">Chicago, IL • Full-time • $135,000 - $170,000</div>
                 <span class="status-badge bg-blue-100 text-blue-800 text-[10px] font-bold px-3 py-1.5 rounded uppercase mb-4 inline-block tracking-wider">Not Applied</span>
